--- a/BT/BT3/Baitap3.ipynb
+++ b/BT/BT3/Baitap3.ipynb
@@ -14835,17 +14835,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Xác suất để côn trùng chết trong  tháng 0 đến tháng 1 là 0.15625000000000003\n",
-      "Xác suất để côn trùng chết trong  tháng 1 đến tháng 2 là 0.34374999999999994\n",
-      "Xác suất để côn trùng chết trong  tháng 2 đến tháng 3 là 0.34375\n",
-      "Xác suất để côn trùng chết trong  tháng 3 đến tháng 4 là 0.15625000000000003\n",
+      "Xác suất để côn trùng chết trong  tháng 0 đến tháng 1 là 15.63%\n",
+      "Xác suất để côn trùng chết trong  tháng 1 đến tháng 2 là 34.37%\n",
+      "Xác suất để côn trùng chết trong  tháng 2 đến tháng 3 là 34.38%\n",
+      "Xác suất để côn trùng chết trong  tháng 3 đến tháng 4 là 15.63%\n",
       "Số lần đẻ trung bình của côn trùng = 1.50\n"
      ]
     }
@@ -14857,7 +14857,7 @@
     "    proba = quad(f, i, i+1)[0]\n",
     "    arrayprob.append(proba)\n",
     "    nexti = i+1\n",
-    "    print('Xác suất để côn trùng chết trong  tháng {valuea} đến tháng {valueb} là {valuec}'.format(valuea=i,valueb=nexti,valuec=proba))\n",
+    "    print('Xác suất để côn trùng chết trong  tháng {valuea} đến tháng {valueb} là {valuec:.2%}'.format(valuea=i,valueb=nexti,valuec=proba))\n",
     "\n",
     "average = 0\n",
     "for i in range(len(arrayprob)):\n",
@@ -14874,12 +14874,14 @@
    "source": [
     "\n",
     "\n",
-    "| case | 0 | 1 | 2 | 3| 4 |\n",
+    "| số lần đẻ | 0 | 1 | 2 | 3| 4 |\n",
     "| :-: | :-: | :-: | :-: | :-: | :-: |\n",
     "|Số lần đẻ|0|1|2|3|0|\n",
-    "|Cận dưới|0|1|2|3|4|\n",
-    "|Cận trên|1|2|3|4|$$\\infty$$|\n",
-    "|Tần suất|0.15625|0.34374|0.375| 0.34375|0.1562|\n",
+    "|tháng tối thiểu|0|1|2|3|4|\n",
+    "|tháng tối đa|1|2|3|4|$$\\infty$$|\n",
+    "|Tần suất|0.15625|0.34374|0.34375| 0.1562|0|\n",
+    "\n",
+    "\n",
     "=> Số lần đẻ trung bình của côn trùng bằng 1.5 lần"
    ]
   }
