Revert "complete send"
This reverts commit 03c6c8ab832090cd8ca0235a8c85c1716ba4d890.

--- a/BT/BT3/Baitap3.ipynb
+++ b/BT/BT3/Baitap3.ipynb
@@ -14473,16 +14473,141 @@
     "$$\n",
     "- Hộp 2\n",
     "$$\n",
-    "P_x = \\sum {\\frac{Bi_{x2}} {Bi_2}} = \\frac{6} {10} * \\frac{1}{3} = 0.2083\n",
+    "P_x = \\sum {\\frac{Bi_{x1}} {Bi_1}} = \\frac{6} {10} * \\frac{1}{3} = 0.2083\n",
     "$$\n",
     "- Hộp 3\n",
     "$$\n",
-    "P_x = \\sum {\\frac{Bi_{x3}} {Bi_3}} = \\frac{6} {12} * \\frac{1}{3} = 0.2083\n",
+    "P_x = \\sum {\\frac{Bi_{x1}} {Bi_1}} = \\frac{6} {12} * \\frac{1}{3} = 0.2083\n",
     "$$\n",
     "=> Hộp 1 có tỷ trọng bi xanh lớn nhất trong khi xác suất lấy bi ngẫu nhiên mỗi hộp là như nhau nên khả năng lấy bi từ hộp 1 là cao nhất\n",
-    "\n",
     "4. Phương pháp mô phỏng\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_sample(soXanh,soDo):\n",
+    "    return ['Xanh' for _ in range(soXanh)] + ['Đỏ' for _ in range(soDo)]\n",
+    "def pick_ball(box):\n",
+    "    return rd.choice(box)\n",
+    "def prob_pick_blueball(Times):\n",
+    "    \n",
+    "    box1 = create_sample(5,3)\n",
+    "    box2 = create_sample(6,4)\n",
+    "    box3 = create_sample(6,6)\n",
+    "    bigBox = [box1,box2,box3]\n",
+    "    score = sum(pick_ball(rd.choice(bigBox))=='Xanh' for _ in range(Times))\n",
+    "    # for i in range (Times):\n",
+    "    #     # chon ngau nhien hop\n",
+    "    #     box_choosen = rd.choice(bigBox)\n",
+    "    #     # chon bi\n",
+    "    #     ball = rd.choice(box_choosen)\n",
+    "    #     print (ball)\n",
+    "    #     if ball == 'Xanh':\n",
+    "    #         score+= 1\n",
+    "    #         print('true')\n",
+    "    print(f'Tỷ lệ bi xanh nhận được trong {Times} thử có hoàn lại = {score/Times}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tỷ lệ bi xanh nhận được trong 10000 thử có hoàn lại = 0.5753\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob_pick_blueball(10000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Câu 4 (1.5 điểm)\n",
+    "\n",
+    "Tung một đồng xu đồng chất 4 lần. Nếu cả 4 lần đều ngửa ta sẽ được 8 đồng, nếu có 3 lần ngửa ta sẽ được 3 đồng, nếu không có lần nào ngửa ta sẽ mất 6 đồng, các trường hợp còn lại ta sẽ mất 2 đồng.\n",
+    "\n",
+    "1. Tính trung bình số tiền ta được/mất. Ta có nên chơi trò chơi này không?\n",
+    "2. Dùng phương pháp mô phỏng để ước lượng trung bình ở Câu (1).\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Bảng tính tiền chưa bao gồm số tiền bỏ ra cho mỗi lần chơi\n",
+    "\n",
+    "| case | 0 | 1 | 2 | 3| 4 |\n",
+    "| :-: | :-: | :-: | :-: | :-: | :-: |\n",
+    "|Award($)|-6|-2|-2|+3|+8|\n",
+    "|Caculate|4C0|4C1|4C2|4C3|4C4|\n",
+    "|No Cases|1|4|6|4|1|\n",
+    "|Properly|0.0625|0.25|0.375|0.25|0.0625|\n",
+    "|Earning Cash(pergame)|-0.375 |  -0.5  |  -0.75 |  0.75 |   0.5|\n",
+    "\n",
+    "\n",
+    " => Số tiền kỳ vọng trò chơi: -0.375 => mức lợi nhuận xoay quan mức -0.375 chưa bao gồm phí chơi cho mỗi lần chơi. cho thấy càng chơi nhiều sẽ càn lỗ tương ứng -0.375 * số lần chơi\n",
+    "\n",
+    "\n",
+    "   \n",
+    "2. Mô phỏng ước lượng số tiền trung bình được mất chưa bao gồm phí chơi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# khi tổng số điểm thu được từ thảy 4 lần tương ứng 4 điểm được 8 đồng 3 điểm được 3 đồng  và cuối cùng 0 điểm mất 6 đồng còn lại sẽ mất 2 đồng\n",
+    "def convert_score_to_money(score):\n",
+    "    match score:\n",
+    "        case 4:\n",
+    "            return 8\n",
+    "        case 3:\n",
+    "            return 3\n",
+    "        case 0:\n",
+    "            return -6\n",
+    "        case default:\n",
+    "            return -2\n",
+    "def score_per_round(TimesPerRound):\n",
+    "    return sum(rd.randint(0,1) for _ in range(TimesPerRound))\n",
+    "    \n",
+    "\n",
+    "def gamble_coin(Times):\n",
+    "    # Gia định mặt xấp là 0 mặt ngữa là 1\n",
+    "    # money = 0\n",
+    "    # for i in range( Times):\n",
+    "    #     score = 0\n",
+    "    #     for j in range(4):\n",
+    "    #         score += rd.randint(0,1)\n",
+    "    #     # print(score)\n",
+    "    #     money += convert_score_to_money(score)\n",
+    "    money = sum(convert_score_to_money(score_per_round(4)) for _ in range(Times))\n",
+    "    \n",
+    "    print(f'Số tiền được/mất sau mô phỏng sau {Times} lần chơi là: {money}$ \\n và tỷ lệ số tiền được/mất mỗi lần chơi là: {money/Times}$/game')\n",
+    "    \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mô Phỏng 10.000 lần chơi**"
    ]
   },
   {
